6系対応後の実装例についてInspection対応を中心に修正＆リポジトリの整理 (#36)
* GSPプラグインの出力先をgitignoreに追加

* パスワード認証サンプルの環境別設定を除去

* パスワード認証サンプルのJUnitバージョンを最新化

* パスワード認証サンプルの環境別設定を除去（コミット漏れ）

* READMEのコマンドが誤っているため修正

* 不要な依存関係の設定を除去

* プロパティファイルの文字コードを他サンプルに合わせて変更

* 不要なコンポーネント定義とファイルを削除

* フォーマット

* 警告対応

* フォーマット

* フォーマッター拡張サンプルの警告対応（mainは最低限の部分のみ）

* モジュール化

* ログファイルをgitignoreに追加

* v6対応前のディレクトリを削除

* ルートのPOMを親POMにする（警告対応）

* XMLスキーマ指定で解決可能な場所にする（警告対応）

* importのワイルドカード指定をやめる（Inspection対応）

* 存在しないリソース指定を除去（Inspection対応）

* Hibernate ValidationのグループIDが古かったため修正

* パスワード認証サンプルがMavenからテスト実行されていなかったため修正

* 不要な依存関係を除去

* アーキタイプのparentを使用しなくなったためGSPプラグインの設定を修正

* 汎用データフォーマット拡張サンプルがexampleに依存しないよう修正

* フォーマット

* Inspection対応

* Inspection対応

* Inspection対応

* 非推奨API使用を修正

* Java17でビルドする設定が漏れていたため設定

* 非推奨API使用を修正

* GSPプラグインの設定が誤っていたため修正

* READMEの記述レベルを全体で合わせる

* plオプションでサブモジュール指定した際にモジュールアクセスエラーになってしまうため対応

* 実装例ではGSPプラグインをプロファイルで制御する必要がないため修正

* トップのREADMEで解説書への案内を追加

* READMEの文体を修正